force-app/main/default/objects/Process_Bypass_Flags__c/Process_Bypass_Flags__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>If fields for specific objects are true, their processes may be bypassed by intentionally failing to meet specific criteria. Useful for selectively bypassing processes during tests.</description>
    <label>Process Bypass Flags</label>
</CustomObject>