force-app/main/default/objects/Process_Bypass_Flags__c/fields/Chargent_Order__c.field-meta.xml
<CustomField>
    <fullName>Chargent_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chargent Order</label>
    <type>Checkbox</type>
</CustomField>