force-app/main/default/objects/Process_Bypass_Flags__c/fields/Home_Services__c.field-meta.xml
<CustomField>
    <fullName>Home_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Home Services</label>
    <type>Checkbox</type>
</CustomField>